name:                 mm-control
version:              0.1
cabal-version:        >=1.6
build-type:           Simple
license:              BSD3
license-file:         LICENSE
author:               Matthew Morrow
maintainer:           Matthew Morrow <mjm2002@gmail.com>
copyright:            (c) 2009-2017 Matthew Morrow
homepage:             https://github.com/mattmorrow/mm-control#readme
category:             Data, Data Structures
-- synopsis:
-- description:
extra-source-files:   README.md,
                      include/mm_control.h,
                      include/mm_control_compat.h
source-repository head
  type:     git
  location: https://github.com/mattmorrow/mm-control
library
  build-depends:      base >= 4 && < 5

  ghc-options:        -O2 -funbox-strict-fields
  ghc-prof-options:
  cc-options:
  hs-source-dirs:     src
  include-dirs:       include
  c-sources:
  extra-libraries:
  Extensions:
                      CPP,
                      BangPatterns
                      PatternGuards,
                      UnboxedTuples,
                      MultiParamTypeClasses,
                      TypeSynonymInstances,
                      FlexibleInstances,
                      EmptyDataDecls,
                      FunctionalDependencies
                      RecordWildCards,
                      NamedFieldPuns,
                      StandaloneDeriving,
                      ScopedTypeVariables,
                      UndecidableInstances,
                      RankNTypes

  other-modules:
  exposed-modules:
                      MM.Control.Monad.Class
                      MM.Control.Monad.Prim
                      MM.Control.Monad.S.S
                      MM.Control.Monad.S.U
                      MM.Control.Monad.S.U2
                      MM.Control.Monad.S.M
                      MM.Control.Monad.S.ST
                      MM.Control.Monad.S.IO
                      MM.Control.Monad.I.I
                      MM.Control.Monad.C.C
                      MM.Control.Monad.R.R
                      MM.Control.Monad.W.W

